# paperscraper

./: .gitignore  README.md  app.py  main.py  pdf_reader.py  pyproject.toml  requirements.txt  scraper.py  storage.py  summariser.py
.github/workflows/: main_paperscraper.yml  paper-scraper.yml
templates/: index.html
